Changes since 0.1.25:

* Removed command to remove 0http and http symlinks. It's been many versions
  since we used those (requested by Peter Prohaska).

* 'make splint' target checks 0refresh.c with splint. Added a couple of checks
  for unlikely error conditions.

Changes since 0.1.24:

* Stricter checking for valid site names.

* If the user rejects a request, reject duplicate requests for the next
  few seconds.

* Cancelling a request from 0refresh sends it an error, not success.

* Cancelling a request also cancels the download, if no other user is also
  trying to fetch it.

* Added support for chkconfig to the init.d script.

* Use new version of lazyfs.

Changes since 0.1.23:

* Updated the Technical file (reported by Issac Trotts).

* Use new version of lazyfs.

Changes since 0.1.22:

* Use new version of lazyfs.

* Check for libtrash and print a warning if running (reported by Tristan
  McLeay).

* Minor bugfix: don't try to close FD -1.

* Don't allow the daemon to be started as root. Apart from being a security
  risk, it tends to create directories that only root can read, which then
  prevents you from running it correctly in future...

* When running configure with --with-distcheck, don't check that the supplied
  user name and init.d directories exist (for packagers).

* Test for bzip2, tar, gzip, wget and gpg on startup.

Changes since 0.1.21:

* Use --bzip2 option to tar rather than -j to support older versions
  (agsb).

* Errors from wget are now logged.

Changes since 0.1.20:

* More helpful error message when an index is incorrectly signed (reported
  by Jeffrey Templon).

* Moved 'Linux' subdirectory to its own module, allowing for separate
  development.

* Subsites are now supported. Give the host as, eg, "my.domain#~user" to
  0build. This will fetch the index from http://my.domain/~user/...

Changes since 0.1.19:

* Give files user write permission by default (doesn't do anything, since fs is